--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,4 +5,4 @@ edition = "2024"
 
 [dependencies]
 chrono = { version = "0.4.41", default-features = false, features = ["clock"] }
-sysinfo = { version = "0.35.1", default-features = false, features = ["system"] }
+sysinfo = { version = "0.35.1", default-features = false, features = ["disk", "system"] }
