--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,3 +6,4 @@ edition = "2024"
 [dependencies]
 chrono = { version = "0.4.41", default-features = false, features = ["clock"] }
 sysinfo = { version = "0.35.1", default-features = false, features = ["disk", "system"] }
+tokio = { version = "1.45.0", default-features = false, features = ["macros", "process", "rt", "rt-multi-thread", "sync", "time"] }
