--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,4 +6,4 @@ edition = "2024"
 [dependencies]
 chrono = { version = "0.4.41", default-features = false, features = ["clock"] }
 nix = { version = "0.30.1", default-features = false, features = ["fs"] }
-tokio = { version = "1.45.0", default-features = false, features = ["fs", "io-util", "macros", "process", "rt", "sync", "time"] }
+tokio = { version = "1.45.0", default-features = false, features = ["fs", "io-util", "process", "rt", "sync", "time"] }
