--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,5 +7,6 @@ edition = "2024"
 alsa = "0.9.1"
 battery = "0.7.8"
 chrono = { version = "0.4.41", default-features = false, features = ["clock"] }
+mpris = "2.0.1"
 nix = { version = "0.30.1", default-features = false, features = ["fs"] }
 tokio = { version = "1.45.0", default-features = false, features = ["fs", "io-util", "macros", "process", "rt", "signal", "sync", "time"] }
