--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,6 +5,7 @@ edition = "2024"
 
 [dependencies]
 alsa = "0.9.1"
+anyhow = "1.0.98"
 battery = "0.7.8"
 chrono = { version = "0.4.41", default-features = false, features = ["clock"] }
 mpris = "2.0.1"
